k3s/radarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 9117
          volumeMounts:
            - name: radarr-config
              mountPath: /config
          resources:
            requests:
              memory: "256Mi"   # Minimum amount of memory the container needs
              cpu: "250m"       # Minimum amount of CPU the container needs
            limits:
              memory: "512Mi"   # Maximum memory the container can use
              cpu: "500m"       # Maximum CPU the container can use
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: pvc-radarr-config  # You can define a PVC if necessary
