k3s/radarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  labels:
    app: radarr
spec:
  type: LoadBalancer
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
      name: radarr
